# clion-opencv-tutorials4

./: CMakeLists.txt
basic/: main.cpp  sample1.cpp  sample2.cpp  sample3.cpp
detection/: MultipleImageWindow.cpp  main.cpp
face/: earDetector.cpp
filter/: main.cpp
goal/: MultipleImageWindow.cpp  MultipleImageWindow.h  main.cpp
gui/: main.cpp  sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp  sample5.cpp  sample6.cpp
